--- a/github/workflows/ci.yaml
+++ b/github/workflows/ci.yaml
@@ -1,6 +1,8 @@
 name: Java CI
 
 on: [push]
+  pull_request:
+#    branches: [master, main]
 
 jobs:
   build:
@@ -8,10 +10,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Set up JDK 18
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '18'
           distribution: 'adopt'
       - name: Test with Maven
         run: mvn --batch-mode --update-snapshots package
+
+
+      - name: Lint Code Base
+        uses: github/super-linter@v4
+        env:
+          VALIDATE_ALL_CODEBASE: false
+          DEFAULT_BRANCH: master
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
