--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,9 +17,9 @@ jobs:
         run: mvn --batch-mode --update-snapshots package
 
 
-      - name: Lint Code Base
-        uses:  github/super-linter/slim@v4
-        env:
-          DEFAULT_BRANCH: master
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          JAVA_FILE_NAME: checkstyle.xml
+#       - name: Lint Code Base
+#         uses:  github/super-linter/slim@v4
+#         env:
+#           DEFAULT_BRANCH: master
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           JAVA_FILE_NAME: checkstyle.xml
